# medieval-life-sim

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  FEATURE-DESIGN.md  GAMEPLAY-GUIDE.md  LAUNCH.md  LICENSE  QUICKSTART.md  README-BLESSED.md  README.md  SIMULATE-LIFE-README.md  package-lock.json  package.json  sandboxed  sandboxed-blessed  sandboxed-ink  sandboxed-roguelike  simulate-life.js  test-marriage-system.js  test-roguelike.js  test-saveload-roundtrip.js  test-t3-2.js  test-track1.js  test-track3-npc-autonomy.js  test-track3-npc.js  test-track3.js  test-track7-save-load.js  test.js
crates/sim/: Cargo.toml
crates/sim/src/: event_queue.rs  kernel.rs  lib.rs  parity.rs  rng.rs  spatial.rs  worldtime.rs
docs/: AAA-NPC-INTEGRATION.md  AAA-NPC-QUICKSTART.md  AAA_NPC_SYSTEM_DESIGN.md  C_DDA_MEDIEVAL_ROADMAP.md  EVAL_2026-07-12.md  GDD_GAP_ANALYSIS.md  REPRODUCIBILITY.md
examples/: aaa-concept-demo.js  aaa-demo-playthrough.js
parity/: oracle.mjs  runner.mjs
scripts/: audit-determinism.js  fix-aaa-determinism.js
src/: Game.js  main-blessed.js  main-ink.js  main-roguelike.js  main.js
tests/: _helpers.js  aaa-integration.test.js  clothing.test.js  cmd-coverage.test.js  combat-attack.test.js  combat.test.js  commands.test.js  communication.test.js  curses.test.js  death.test.js  determinism.test.js  economy.test.js  governance.test.js  integration.test.js  language.test.js  magic.test.js  marriage.test.js  parity.test.js  prosthetics.test.js  ranged-combat.test.js  religion.test.js  sanitation.test.js  save-load-roundtrip.test.js  save-load.test.js  (+6 more)
(+110 files in other folders)
